# chatterbox-turbo-stream

./: README.md  example_stream_tts_turbo.py  example_tts.py  pyproject.toml
src/chatterbox/: audio_player.py  audio_saver.py  tts_turbo.py
src/chatterbox/models/s3gen/: const.py  flow_matching.py  s3gen.py
src/chatterbox/models/s3gen/matcha/: transformer.py
src/chatterbox/models/t3/: t3.py
