[project]
name = "chatterbox-turbo-stream"
version = "0.1.6"
description = "Chatterbox Turbo Streaming: Open Source TTS and Voice Conversion by Resemble AI and upgraded by Beskamir"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Beskamir", email = "Beskamir@gmail.com"}
]
dependencies = [
    "numpy>=1.24.0,<1.26.0",
    "librosa==0.11.0",
    "s3tokenizer",
    "transformers==4.46.3",
    "diffusers==0.29.0",
    "resemble-perth==1.0.1",
    "conformer==0.3.2",
    "safetensors==0.5.3",
    "spacy-pkuseg",
    "pykakasi==2.3.0",
    "gradio==5.44.1",
    "pyloudnorm",
    "omegaconf",
    "sounddevice==0.5.2",
    "soundfile==0.13.1"
]

[project.urls]
Homepage = "https://github.com/Beskamir/chatterbox-turbo-stream"
Repository = "https://github.com/Beskamir/chatterbox-turbo-stream"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
